--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Prologue by HTML5 UP
 	html5up.net | @ajlkn
@@ -24,8 +24,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Joseph Homrocky</h1>
+							<p>Junior Software Developer</p>
 						</div>
 
 					<!-- Nav -->
@@ -57,11 +57,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/jhomrocky/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.facebook.com/joe.homrocky" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/jhomrocky/" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:jhomrocky@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -76,14 +75,13 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+                                <br />
+								<h2 class="alt">Welcome to the mind <br />of an aspiring programmer.</h2>
+
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Find Out More</a>
 							</footer>
 
 						</div>
@@ -94,56 +92,65 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Some Of My Work</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Provided below are some simple examples of the knowledge I have regarding multiple aspects of programming.<br /> My skills include, but are not limited to: <br /> 
+                                C# | HTML5/Bootstrap | MVC | JavaScript | jQuery | SQL Server</p>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3><i class="fa fa-cogs" aria-hidden="true"></i>   Back-End Work</h3>
+                                            <ul>
+                                                <li><a href="https://github.com/jhomrocky/Week1_FortuneTeller"><i class="fa fa-angle-right" aria-hidden="true"></i>  C# - Fortune Teller</a></li>
+                                                <li><a href="https://github.com/jhomrocky/Week2_LuckyNumbers"><i class="fa fa-angle-right" aria-hidden="true"></i>  C# - Lucky Numbers</a></li>
+                                            </ul>
 										</header>
 									</article>
-									<article class="item">
+									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
-									</article>
+									</article>-->
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="Photo by Nick Karvounis on Unsplash" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3><i class="fa fa-code" aria-hidden="true"></i>   Front-End Work</h3>
+                                            <ul>
+                                                <li><a href="https://github.com/jhomrocky/Tuscany"><i class="fa fa-angle-right" aria-hidden="true"></i>  Bootstrap/HTML - Mock Tourist Info Site</a></li>
+                                            </ul>
 										</header>
 									</article>
-									<article class="item">
+									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
 										</header>
-									</article>
+									</article>-->
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3><i class="fa fa-database" aria-hidden="true"></i>   Full-Stack Work</h3>
+                                            <ul>
+                                                <li><a href="https://github.com/jhomrocky/FortuneTellerMVC"><i class="fa fa-angle-right" aria-hidden="true"></i>  MVC - C# Fortune Teller Redone</a></li>
+                                                <li><a href="https://github.com/jhomrocky/WardrobeMVCProject"><i class="fa fa-angle-right" aria-hidden="true"></i>  MVC - "Build a Soldier"</a></li>
+                                            </ul>
 										</header>
 									</article>
-									<article class="item">
+									<!--<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
-									</article>
+									</article>-->
 								</div>
 							</div>
 
@@ -155,17 +162,15 @@
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>Meet the Maker - My Journey So Far</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="https://www.linkedin.com/in/jhomrocky/" class="image featured"><img src="images/pic08.png" alt="About Me, Before and After" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+                            <hr />
+							<p style="text-align: justify">My name is Joseph Homrocky, and my passion is computers. I have always had an undying affection for all things technology, and an even deeper interest in learning how they operate,
+                            and this is where the wonderful world of programming comes in. After a brief stint in the military, I bounced around life until I ended up back in the world of computers.
+                            Now, my time and dedication go towards learning everything I can to eventually become the best programmer I can be, no matter how long it may take. Allow me to help you however I can.</p>
 
 						</div>
 					</section>
@@ -175,23 +180,20 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Reach Out To Me</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Please feel free to contact me regarding anything! Just fill out the form below and I'll get back to you as soon as I can. </p>
 
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/jhomrocky@gmail.com">
 								<div class="row">
 									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="6u$ 12u$(mobile)"><input type="text" name="_replyto" placeholder="Email" /></div>
 									<div class="12u$">
 										<textarea name="message" placeholder="Message"></textarea>
 									</div>
 									<div class="12u$">
-										<input type="submit" value="Send Message" />
+										<input type="submit" value="Send me your thoughts" />
 									</div>
 								</div>
 							</form>
@@ -206,7 +208,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Joseph Homrocky. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
